# treehacks2026

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MULTIAGENT_PLAN.md  README.md  flake.nix  pyproject.toml  ruff.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 778ca8ggkblrs1g4yqggav3g39mcqq6c-source  ngdfag0pfs1h54pbjs9ywah4zhqsphf1-source  wzcf74b2g5c3qfg4rcswcz28ngiwzzp0-source  zq5gzr408hd9xin5cb1i1lq369y3ddqv-source
agent/: __init__.py  agent.py  agent_wrapper.py  arm_controller.py  calibration.py  calibration_data_ARM1.json  calibration_data_ARM2.json  calibration_data_ARM3.json  camera.py  coordinate_transform.py  llm.py  prompts.py  run.py  tools.py  vlm_agent.py
agent/vision/: mock_backend.py
agent_v2/: README.md  __init__.py  agent.py  annotate.py  calibration.py  calibration_data.json  calibration_data_ARM1.json  calibration_data_ARM2.json  coordinate_transform.py  models.py  prompts.py  run.py  tools.py
agent_v2/vision/: __init__.py  base.py  mock_backend.py  sam2_backend.py  yolo_backend.py
agent_v3/: __init__.py  agent.py  gemini_vision.py  llm.py  prompts.py  run.py  tools.py
control/: camera.py  ctltest.py  data.json  flake.nix  main.py  read.py  realsense_test.py  sockets.py  trajectories.py
control/trajectories/: helix.json  lemniscate.json  lorenz.json  rossler.json  spring.json  springShift1.json  springShift2.json  springShift3.json  wave.json
lean/: Main.lean  Math.lean  Trajectories.lean  Types.lean  Utils.lean  flake.nix  lake-manifest.json  lakefile.lean  lakefile.toml
motion_controller/: CLAUDE.md  __init__.py  heightmap.py  main.py  motion.py  pyproject.toml
motion_controller/testing_scripts/: diagonal_sweep.py  random_points.py
server/: __init__.py  agent_wrapper.py  app.py  config.py  events.py  hardware.py  streams.py
server/routers/: agent.py  arm.py  calibration.py  camera.py  vision.py  webcam.py
src/: ctltest.py  data.json  flake.nix  main.py
src/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
src/.direnv/flake-inputs/: 3g586df91s13jk4cwrys3b5yb6qb8587-source
vr_control/: arm_client.py
web/: .cta.json  index.html  package-lock.json  package.json  vite.config.ts
web/src/: routeTree.gen.ts  styles.css
web/src/lib/: api.ts  constants.ts  types.ts  (+1 more)
wheels/: pyrealsense2-2.57.6-cp312-cp312-linux_aarch64.whl
(+28 files in other folders)
