[project]
name = "treehacks2026"
version = "0.1.0"
description = "TreeHacks 2026 project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "roarm-sdk>=0.1.0",
]

[project.scripts]
treehacks2026 = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.0",
    "pytest>=8.0",
]
