[project]
name = "treehacks2026"
version = "0.1.0"
description = "TreeHacks 2026 project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.63.0",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyrealsense2>=2.56.5.9235",
    "python-dotenv>=1.2.1",
    "roarm-sdk>=0.1.0",
    "ultralytics>=8.3.0",
]

[project.scripts]
treehacks2026 = "main:main"
vlm-agent = "agent.run:main"
vlm-agent-v2 = "agent_v2.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "agent", "agent_v2"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.0",
    "pytest>=8.0",
]
